fixed alignment of intro on mobile

--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -229,7 +229,7 @@ nav{
 }
 
 .mediaCont{
-    align-items: flex-start;
+    align-items: flex-startgit ;
 }
 
 .contentDiv .mediaCont video{
