--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,6 @@ a {
 	max-width: 1400px;
 	height: 100vh;
 	min-height: 900px;
-	padding-top: 100px;
 	margin: 0 auto;
 	
 	
